[package]
name = "dango"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
polars = "0.17.0"
ndarray = "0.15.0"
vtext = "0.2.0"
